# Laghos

./: .gitignore  .gitlab-ci.yml  .travis.yml  AnalyticalGeometricShape.cpp  AnalyticalGeometricShape.hpp  AnalyticalSurface.cpp  AnalyticalSurface.hpp  CHANGELOG  CMakeLists.txt  COMPILE.md  Circle.cpp  Circle.hpp  INSTALL_cmake.md  INSTALL_makefile.md  LICENSE  Line.cpp  Line.hpp  NOTICE  README.md  SampleMesh.hpp  adaptive_quad.hpp  auxiliary_functions.cpp  auxiliary_functions.hpp  bc1.mesh  bc2.mesh  bc3.mesh  bisect.hpp  collect_timings.sh  collect_timings_ray.sh  dist_solver.cpp  dist_solver.hpp  extrapolator.cpp  extrapolator.hpp  ghost_penalty.cpp  ghost_penalty.hpp  kForceOperator.cpp  kForceOperator.hpp  laghos.cpp  laghos_abc.hpp  laghos_ale.cpp  (+63 more)
amr/: README.md  eval.py  laghos.cpp  laghos_assembly.cpp  laghos_assembly.hpp  laghos_solver.cpp  laghos_solver.hpp  makefile  requirements.txt
autotest/: baseline.out  test.sh
cuda/: README.md  cuda.hpp  laghos.cpp  laghos_assembly.cpp  laghos_assembly.hpp  laghos_solver.cpp  makefile
data/: box01_hex.mesh  circles3.mesh  circles4.mesh  cube01_hex.mesh  cube_511_hex.mesh  cube_522_hex.mesh  cube_543_hex.mesh  cube_713_hex.mesh  cube_723_hex.mesh  cube_743_hex.mesh  cube_922_hex.mesh  cube_gmsh_11.msh  cube_gmsh_19.msh  cube_gmsh_21.msh  cube_hole_hex.msh  mesh-explorer.mesh  quad.mesh  rectangle01_quad.mesh  ref-segment-c0.mesh  refined.mesh  rt2D.mesh  segment-n1p7-1.mesh  segment-nhalf-1.mesh  segment01.mesh  sphere_hole_V2.msh  sphere_hole_V3.msh  sphere_hole_V4.msh  square01_quad.mesh  square01_quad_3by3.mesh  square01_tri.mesh  squareHole01_quad.mesh  square_10x9_quad.mesh  square_33_quad.mesh  square_6x5_quad.mesh  square_gresho.mesh  square_hole.msh  square_hole_gmsh.msh  square_square_hole_rot.msh  trapezoid_quad.mesh  wall_a02_b05_c15.mesh  (+1 more)
hip/: README.md  laghos.cpp  laghos_assembly.hpp  laghos_solver.cpp  makefile
kernels/: defines.h  force.okl  kForce.c  kForceOperator.cpp  kForceOperator.hpp  kForcePAOperator.cpp  kForcePAOperator.hpp  kGlobalToLocal.c  kGridFuncToQuad.c  kInitGeometryInfo3D.c  kLocalToGlobal.c  kMapping.c  kMass.c  kMassOperator.cpp  kMassOperator.hpp  kMassPAOperator.cpp  kMassPAOperator.hpp  kQuadratureData.c  kernels.h  kernels.hpp  quadratureData.okl  vector_axpy.c  vector_clear_dofs.c  vector_dot.c  vector_get_subvector.c  vector_map_dofs.c  vector_min.c  vector_neg.c  vector_op_eq.c  vector_set_subvector.c  vector_set_subvector_const.c  vector_vec_add.c  vector_vec_sub.c  vector_xpay.c  vector_xsy.c
occa/: .gitignore  README.md  config.json  laghos.cpp  laghos_assembly.cpp  laghos_solver.cpp  laghos_solver.hpp  laghos_utils.hpp  makefile  mpi_utils.hpp  rayConfig.json
qupdate/: alloc.hpp  array.hpp  d2q.cpp  d2q.hpp  d2qGrad.cpp  d2qScalar.cpp  densemat.cpp  densemat.hpp  dof2quad.cpp  dof2quad.hpp  eigen.cpp  eigen.hpp  geom.cpp  geom.hpp  global2local.cpp  maps.cpp  maps.hpp  memcpy.cpp  memcpy.hpp  qupdate.cpp  qupdate.hpp
raja/: README.md  laghos.cpp  laghos_assembly.cpp  laghos_assembly.hpp  laghos_solver.cpp  laghos_solver.hpp  makefile  memoryManager.hpp  raja.hpp  rarray.hpp  rbilinearform.cpp  rbilinearform.hpp  rbilininteg.cpp  rbilininteg.hpp  rconfig.cpp  rconfig.hpp  rconform.cpp  rdbg.hpp  rfespace.cpp  rfespace.hpp  rgridfunc.cpp  rgridfunc.hpp  rmalloc.cpp  rmalloc.hpp  rmanaged.hpp  rnvvp.hpp  rode.cpp  rode.hpp  roperator.cpp  roperator.hpp  rprolong.cpp  rprolong.hpp  rrestrict.cpp  rsolvers.cpp  rsolvers.hpp  rtypedef.hpp  rvector.cpp  rvector.hpp  simpool.hpp
raja.subdir/: laghos_solver.hpp
rom/: .gitignore  DESIGN.md  README.md  SampleMesh.hpp  laghos  laghos.cpp  laghos_assembly.cpp  laghos_assembly.hpp  laghos_eqp.cpp  laghos_rom.cpp  laghos_rom.hpp  laghos_solver.cpp  laghos_solver.hpp  laghos_timeinteg.cpp  laghos_timeinteg.hpp  laghos_utils.cpp  laghos_utils.hpp  makefile  makefile_yc  merge.cpp  setup.sh  testrun.sh  testrun2.sh
sedov/: adaptive_quad.hpp  (+4 more)
(+618 files in other folders)
